# v4.3.1

- Add OrganizationSocialApp, configurable in django admin, that allows Organizations to be associated to SocialApps and automatically assign users who log in with
  the associated SocialApp to the Organization.

# v4.2.1

- Critical fix for static file locations

# v4.2.0 (Broken, do not run)

- Support sentry sdk artifact bundles for source map support, including debug id mappings. Improves source map support for various sentry sdk integrations. Source maps no longer require a release. Users may need to reupload existing source maps.
- GLITCHTIP_MAX_FILE_LIFE_DAYS now defaults to GLITCHTIP_MAX_EVENT_LIFE_DAYS (instead of 2 x event life).
- Add organization and projects throttle. Can be set in Django admin.

# v4.1.5

- Upgrade to django-allauth 65.0.0
- Upgrade Python to 3.13
- Use connection pooling by default, unless max conn age is set

# v4.1.4

- Fix bug where release names with special chars did not allow release assemble to work

# v4.1.3

- Optimize alert sending logic to only consider recently ingested issues
- Fixed https://gitlab.com/glitchtip/glitchtip-backend/-/issues/260

# 4.1.2

- Save performance transaction data in bulk, instead of one at a time
- Fix migration that would fail in Postgres 13, which we still aim to support

# 4.1.0

- Remove event migration tool from 3.x. To migrate event data from 3.x to 4.1, first upgrade to 4.0.12. If event data doesn't need migrated, it's safe to upgrade from 3.x to any 4.x version.
- Migrate MFA to django-allauth
- Upgrade to django 5.1
- Add support for django postgres pooling via env vars DATABASE_POOL, DATABASE_POOL_MIN_SIZE, and DATABASE_POOL_MAX_SIZE