@@ -1,6 +1,7 @@
-# Generated by Django 5.1.5 on 2025-02-05 15:59
+# Generated by Django 5.1.6 on 2025-02-12 14:42
 
 import django.db.models.deletion
+import django.utils.timezone
 from django.db import migrations, models
 
 
@@ -10,6 +11,7 @@ class Migration(migrations.Migration):
 
     dependencies = [
         ('organizations_ext', '0006_organization_stripe_subscription_id'),
+        ('organizations_ext', '0007_rename_stripe_subscription_id_organization_stripe_customer_id'),
     ]
 
     operations = [
@@ -21,6 +23,7 @@ class Migration(migrations.Migration):
                 ('price', models.DecimalField(decimal_places=2, max_digits=10)),
                 ('events', models.PositiveBigIntegerField()),
                 ('is_public', models.BooleanField()),
+                ('name', models.CharField(default='')),
             ],
             options={
                 'abstract': False,
@@ -34,9 +37,13 @@ class Migration(migrations.Migration):
                 ('current_period_end', models.DateTimeField()),
                 ('organization', models.ForeignKey(null=True, on_delete=django.db.models.deletion.SET_NULL, to='organizations_ext.organization')),
                 ('product', models.ForeignKey(on_delete=django.db.models.deletion.CASCADE, to='stripe.stripeproduct')),
+                ('is_active', models.BooleanField(default=False)),
+                ('is_primary', models.BooleanField(default=False)),
+                ('created', models.DateTimeField(default=django.utils.timezone.now)),
             ],
             options={
                 'abstract': False,
+                'constraints': [models.UniqueConstraint(condition=models.Q(('is_primary', True)), fields=('organization', 'is_primary'), name='unique_primary_subscription_per_organization')],
             },
         ),
     ]
