@@ -1,19 +1,0 @@
-# Generated by Django 5.1.5 on 2025-02-06 15:38
-
-from django.db import migrations, models
-
-
-class Migration(migrations.Migration):
-
-    dependencies = [
-        ('stripe', '0001_initial'),
-    ]
-
-    operations = [
-        migrations.AddField(
-            model_name='stripesubscription',
-            name='is_active',
-            field=models.BooleanField(default=False),
-            preserve_default=False,
-        ),
-    ]
