@@ -1,18 +1,0 @@
-# Generated by Django 5.1.5 on 2025-02-06 16:48
-
-from django.db import migrations, models
-
-
-class Migration(migrations.Migration):
-
-    dependencies = [
-        ('stripe', '0002_stripesubscription_is_active'),
-    ]
-
-    operations = [
-        migrations.AddField(
-            model_name='stripesubscription',
-            name='is_primary',
-            field=models.BooleanField(default=False),
-        ),
-    ]
