@@ -1,18 +1,0 @@
-# Generated by Django 5.1.5 on 2025-02-06 16:48
-
-from django.db import migrations, models
-
-
-class Migration(migrations.Migration):
-
-    dependencies = [
-        ('organizations_ext', '0007_rename_stripe_subscription_id_organization_stripe_customer_id'),
-        ('stripe', '0003_stripesubscription_is_primary'),
-    ]
-
-    operations = [
-        migrations.AddConstraint(
-            model_name='stripesubscription',
-            constraint=models.UniqueConstraint(condition=models.Q(('is_primary', True)), fields=('organization', 'is_primary'), name='unique_primary_subscription_per_organization'),
-        ),
-    ]
