@@ -1,20 +1,0 @@
-# Generated by Django 5.1.5 on 2025-02-06 18:19
-
-import django.utils.timezone
-from django.db import migrations, models
-
-
-class Migration(migrations.Migration):
-
-    dependencies = [
-        ('stripe', '0004_stripesubscription_unique_primary_subscription_per_organization'),
-    ]
-
-    operations = [
-        migrations.AddField(
-            model_name='stripesubscription',
-            name='created',
-            field=models.DateTimeField(default=django.utils.timezone.now),
-            preserve_default=False,
-        ),
-    ]
