@@ -1,19 +1,0 @@
-# Generated by Django 5.1.5 on 2025-02-06 18:41
-
-from django.db import migrations, models
-
-
-class Migration(migrations.Migration):
-
-    dependencies = [
-        ('stripe', '0005_stripesubscription_created'),
-    ]
-
-    operations = [
-        migrations.AddField(
-            model_name='stripeproduct',
-            name='name',
-            field=models.CharField(default=''),
-            preserve_default=False,
-        ),
-    ]
